Stop graphs overflowing cells on search page

--- a/www-src/app/styles/search.less
+++ b/www-src/app/styles/search.less
@@ -9,6 +9,7 @@
 
 .searchpage {
 	.dc-chart {
+		float: none;
 		.axis {
 			display: none;
 		}
